[package]
name = "hash_Zome"
version = "0.0.1"
keywords = [ "holochain" ]
categories = [ "command-line-utilities"]
edition = "2021"

[[bin]]
name = "hash_zome"
path = "src/main.rs"


[dependencies]
anyhow = "1.0"
base64 = "0.13"
tokio = { version = "1.8.1", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive", "rc" ] }

holochain_serialized_bytes = "=0.0.51"
holo_hash = { version = "0.0.19", features =["encoding", "hashing"]}

